# pricepredict

./: README.md  data_extract.ipynb  pyproject.toml
